# meka-ros-pkg

./: .gitignore
m3_cameras/: mainpage.dox  manifest.xml
m3_cameras/config/: pg0_1024x768_calib.yml.ens~  pg1_1024x768_calib.yml.ens~  point_grey_0.yml~  point_grey_1.yml~
m3_cameras/launch/: dual_pt_grey.launch~  meka_eyes.launch  meka_eyes.launch~
m3kinect/: CMakeLists.txt  package.xml
m3kinect/launch/: m3kinect2_top.launch  m3kinect_both.launch  m3kinect_front.launch  m3kinect_top.launch  m3openni2_tracker.launch  m3openni_tracker.launch  m3tabletop_segmentation.launch
m3openni_tracker/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
m3openni_tracker/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
m3openni_tracker/catkin_generated/installspace/: m3openni_tracker.pc  m3openni_trackerConfig.cmake
m3openni_tracker/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
m3openni_tracker/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
m3openni_tracker/devel/lib/pkgconfig/: m3openni_tracker.pc
m3openni_tracker/devel/share/m3openni_tracker/cmake/: m3openni_trackerConfig.cmake
m3openni_tracker/gtest/: CTestTestfile.cmake  Makefile
m3openni_tracker/src/: m3openni_tracker.cpp
meka_description/: ens.launch  ens.launch~  kinect_to_meka.launch  kinect_to_meka.launch~  kinect_top_extrinsics.launch  kinect_top_extrinsics.launch.OLD  m1.rviz  m3ens.launch  m3ens_shm.launch  m3ens_viz.launch  meka_additional_transforms.launch  meka_description.launch  meka_robot.launch  meka_ros_state.py  meka_ros_state_ens.py  test_viz_bie.py  test_viz_ens.py  test_viz_ens_m3.py  test_viz_gai.py  test_viz_m1.py
meka_description/meshes/mid_res/A2R3/: A2R3_LT3_bicep.dae  A2R3_LT4_elbow.dae
meka_description/meshes/mid_res/B1R1/: B1R2_ENS.stl
meka_description/robots/: bie.urdf.xacro  ens.urdf.xacro  gai.urdf.xacro  m1.urdf.xacro
meka_description/urdf/: A2R4_l_arm_defs.urdf.xacro  A2R4_r_arm_defs.urdf.xacro  B1R2B_defs.urdf.xacro  ENS_head_defs.urdf.xacro  H2R4_l_hand_defs.urdf.xacro  H2R4_r_hand_defs.urdf.xacro  S2R1B_head_defs.urdf.xacro  Z1R2B_defs.urdf.xacro  hokuyo_laser.urdf.xacro
meka_moveit/: .setup_assistant  package.xml
meka_moveit/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  meka.srdf  ompl_planning.yaml
meka_moveit/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
meka_moveit_config/: .setup_assistant  package.xml
meka_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  meka.srdf  ompl_planning.yaml
meka_moveit_config/launch/: default_warehouse_db.launch  demo.launch  meka_demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
meka_moveit_config2/launch/: moveit.rviz
meka_moveit_config_one_arm/: .setup_assistant
meka_moveit_config_one_arm/launch/: meka_demo.launch  planning_pipeline.launch
meka_omnibase_tools/: CMakeLists.txt  package.xml
meka_omnibase_tools/launch/: meka_test.launch
meka_omnibase_tools/scripts/: meka_omnibase_bridge.py  teleop.py
meka_trajectory/: traj_server.py
meka_trajectory/msg_gen/lisp/: TrajAction.lisp  TrajActionFeedback.lisp  TrajActionGoal.lisp  TrajActionResult.lisp  TrajFeedback.lisp  TrajGoal.lisp  TrajResult.lisp  _package.lisp  _package_TrajAction.lisp  _package_TrajActionFeedback.lisp  _package_TrajActionGoal.lisp  _package_TrajActionResult.lisp  _package_TrajFeedback.lisp  _package_TrajGoal.lisp  _package_TrajResult.lisp
teleop_sixaxis/: manifest.xml  sixaxis.py
